--- a/U3/practicas/p1.html
+++ b/U3/practicas/p1.html
@@ -12,6 +12,6 @@
       <h2 class="highlighted-text">Práctica 1</h2>
     </div>
   </div>
-  <script src="https://github.com/OsielMarquez/PrograWeb/tree/main/U3/js"></script>
+  <script src="/js/p2.js"></script>
 </body>
 </html>
