--- a/U3/practicas/p2.html
+++ b/U3/practicas/p2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practica 2</title>
-  <link rel="stylesheet" href="/css/estilos.css">
+  <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
   <div class="grid-container">
@@ -12,6 +12,6 @@
       <h2 class="highlighted-text">Práctica 2</h2>
     </div>
   </div>
-  <script src="/js/p2.js"></script>
+  <script src="../js/p2.js"></script>
 </body>
 </html>
