--- a/U3/practicas/p4.html
+++ b/U3/practicas/p4.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practica 4</title>
-  <link rel="stylesheet" href="/css/estilo4.css">
+  <link rel="stylesheet" href="../css/estilo4.css">
 </head>
 <body>
   <div class="grid-container">
@@ -35,6 +35,6 @@
     </div>
 </div>
 <p id="resultado"></p>
-  <script src="/js/p4.js"></script>
+  <script src="../js/p4.js"></script>
 </body>
 </html>
