Correción de direcciones.

--- a/U3/practicas/p5Parte2.html
+++ b/U3/practicas/p5Parte2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practica 5 parte 2</title>
-  <link rel="stylesheet" href="/css/estilo4.css">
+  <link rel="stylesheet" href="../css/estilo4.css">
 </head>
 <body>
   <div class="grid-container">
@@ -41,6 +41,6 @@
     <div id="sumaTotal"></div>
   </div>
 
-  <script src="/js/p5Parte2.js"></script>
+  <script src="../js/p5Parte2.js"></script>
 </body>
 </html>
