--- a/U3/practicas/p5.html
+++ b/U3/practicas/p5.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practica 5</title>
-  <link rel="stylesheet" href="/css/estilo4.css">
+  <link rel="stylesheet" href="../css/estilo4.css">
 </head>
 <body>
   <div class="grid-container">
@@ -38,6 +38,6 @@
                 </a>
 </div>
 
-  <script src="/js/p5.js"></script>
+  <script src="../js/p5.js"></script>
 </body>
 </html>
