--- a/U3/practicas/p6.html
+++ b/U3/practicas/p6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica 6</title>
-    <link rel="stylesheet" href="/css/estilo6.css">
+    <link rel="stylesheet" href="../css/estilo6.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     </div>
     <div id="frutasList"></div>
 
-    <script src="/js/p6.js"></script>
+    <script src="../js/p6.js"></script>
 
 </body>
 
