--- a/U3/practicas/p7.html
+++ b/U3/practicas/p7.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica 7</title>
-    <link rel="stylesheet" href="/css/estilo6.css">
+    <link rel="stylesheet" href="../css/estilo6.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         <button id="agregarElemento">Agregar nuevo enlace</button>
     </div>
 
-    <script src="/js/p7.js"></script>
+    <script src="../js/p7.js"></script>
 </body>
 
 </html>
