cambios de tamaño

--- a/U3/practicas/p7.html
+++ b/U3/practicas/p7.html
@@ -25,7 +25,7 @@
         <h5>casi no veo pelis</h5>
     </div>
 
-   <div class="highlighted-text">
+   <div class="lista">
     <nav>
         <ul id="menu">
             <li><a href="https://www3.animeflv.net/anime/umi-ga-kikoeru" target="_blank"> Umi ga Kikoeru</a></li>
